<resources>
    <string name="str_english">English</string>
    <string name="str_hindi">हिंदी</string>
    <string name="str_marathi">मराठी</string>
    <string name="str_eng_code">en-gb</string>
    <string name="str_hindi_code">hi</string>
    <string name="str_marathi_code">mr</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDTtO6dht-M6tX4uL28f8HTLwIQrT_ivUU</string>
    <string name="app_name">Fair Fare India</string>
    <string name="logIn">Sign In</string>
    <string name="continuetxt">By continuing, you agree to Fair Fare</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="signup">Sign Up</string>
    <string name="title_home">Get Fair Fare</string>
    <string name="str_no_route_found">No route is found</string>
    <string name="drawer_language">Language</string>
    <string name="drawer_available_reward_point">Available Reward Points</string>
    <string name="str_logout">Sign Out</string>
    <string name="str_app_language">Choose App Language</string>
    <string name="title_compare_ride">Compare Rides</string>
    <string name="str_drop_off_location">Drop-off Location</string>
    <string name="str_pick_up_location">Pick-up Location</string>
    <string name="str_schedule_date_and_time">Schedule Date &amp; Time</string>
    <string name="str_no_of_bags">No. of Bags</string>
    <string name="available_rides">Available Rides</string>
    <string name="str_sort">Sort</string>
    <string name="str_complaint_details">Complaint Details</string>
    <string name="str_dispute_reasons">Dispute reasons:</string>
    <string name="str_additional_comments">Additional comments:</string>
    <string name="str_estimated">Estimated</string>
    <string name="str_actual">Actual</string>
    <string name="str_distance">Distance</string>
    <string name="str_ride_time">Ride Time</string>
    <string name="str_wait_time">Wait Time</string>
    <string name="str_basic_fare">Basic Fare</string>
    <string name="str_wait_charges">Wait Charges</string>
    <string name="str_night_charges">Night Charges</string>
    <string name="str_toll_charges">Toll Charges</string>
    <string name="str_surcharge">Surcharge</string>
    <string name="str_total_fare">Total Fare</string>
    <string name="str_ride_details">Ride Details</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_your_current_ride_is_completed">Your Current Ride is Completed</string>
    <string name="str_note">Note:</string>
    <string name="btn_settle_and_close">Settle and Close</string>
    <string name="btn_register_dispute">Register Dispute</string>
    <string name="str_ride_scheduled_on">Ride Scheduled On</string>
    <string name="str_est_distance">Est.Distance</string>
    <string name="str_est_time">Est.Time</string>
    <string name="btn_compare_rides">Compare Rides</string>
    <string name="str_skip">Skip</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_and">and</string>
    <string name="str_or_continue_with">Or continue with</string>
    <string name="str_don_t_have_an_account">Don\'t have an account?</string>
    <string name="str_ride_ratings">Ride Ratings</string>
    <string name="str_photos">Photos</string>
    <string name="str_vehicle_number">Vehicle Number</string>
    <string name="str_start_trip_meter">Start Trip Meter</string>
    <string name="str_driver">Driver</string>
    <string name="str_badge_number">Badge Number</string>
    <string name="title_otp_verification">OTP Verification</string>
    <string name="str_a_code_has_been_sent_to">A code has been sent to</string>
    <string name="str_you_will_get_otp_by_sms_in">You will get OTP by SMS in</string>
    <string name="btn_finish">Finish</string>
    <string name="str_search_location">Search Location</string>
    <string name="str_locate_on_map">Locate on Map</string>
    <string name="str_current_location">Current Location</string>
    <string name="str_recent">Recent</string>
    <string name="str_saved">Saved</string>
    <string name="btn_continue">Continue</string>
    <string name="str_search">Search</string>
    <string name="hint_email_id_optional">Email Id (Optional)</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_other">Other</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="lbl_dispute_reason">Dispute reason</string>
    <string name="lbl_additional_comments">Additional comments</string>
    <string name="hint_start_trip_meter">Start Trip Meter</string>
    <string name="hint_end_trip_meter">End Trip Meter</string>
    <string name="hint_actual_meter_fare">Actual Meter Fare</string>
    <string name="str_upload_photo">UPLOAD PHOTO</string>
    <string name="str_vehicle_details">Vehicle Details</string>
    <string name="hint_enter_vehicle_number">Enter Vehicle Number (Optional)</string>
    <string name="hint_start_trip_meter_optional">Start Trip Meter (Optional)</string>
    <string name="str_driver_details">Driver Details</string>
    <string name="hint_enter_driver_name_optional">Enter Driver Name (Optional)</string>
    <string name="hint_enter_driver_badge_number_optional">Enter Driver’s Badge Number (Optional)</string>
    <string name="btn_track_ride">Track Ride</string>
    <string name="hint_enter_your_review">Enter your review</string>
    <string name="btn_submit">Submit</string>
    <string name="str_track_board">Track Board</string>
    <string name="btn_end_ride">End Ride</string>
    <string name="str_wait_time_charges">Wait Time Charges</string>
    <string name="str_luggage_charges">Luggage Charges</string>
    <string name="str_discounts_and_offers">Discounts and Offers</string>
    <string name="btn_start_ride">Start Ride</string>
    <string name="str_original_drop_off_location">Original Drop-off Location</string>
    <string name="str_location">Location</string>
    <string name="msg_contact_us">If you have any questions or need clarifications or have suggestions, please do write to us. We will get back to you at the earliest possible.</string>
    <string name="hint_your_message">Your message</string>
    <string name="hint_enter_phone_number">Enter Phone Number</string>
    <string name="hint_enter_email_id">Enter Email Id</string>
    <string name="hint_enter_birth_date">Enter Birth Date</string>
    <string name="hint_enter_profession">Enter Profession</string>
    <string name="hint_enter_home_city">Enter Home City</string>
    <string name="btn_save">Save</string>
    <string name="str_filter_by_status">Filter By Status:</string>
    <string name="str_effective_date">Effective Date</string>
    <string name="str_msg_rate_card">The fare charges mentioned are effective from 22nd November 2021.</string>
    <string name="msg_total_charges">Toll will be chargeable at actual.</string>
    <string name="str_auto">Auto</string>
    <string name="str_fare">Fare</string>
    <string name="msg_fare">Rs. 25/- for first fall of 2 Kms (upon downing the meter) and thereafter Rs. 8/- per Km for every additional Km.</string>
    <string name="msg_night_charges">25% of the fair</string>
    <string name="str_night_time">(00:00 AM to 5:00 AM)</string>
    <string name="str_waiting_charges">Waiting Charges</string>
    <string name="msg_waiting_charges">Rs. 30/- per hour or part thereof (subject to a min of 15 mins stay)</string>
    <string name="msg_toll_charges">Rs. 0/- toll charges for single entry</string>
    <string name="msg_surcharges">Rs. 30/- per hour or part thereof (subject to a min of 15 mins stay)</string>
    <string name="msg_luggage">Rs. 7.50/- shall be charged as extra luggage charges whereas the driver/operator shall not charge and money for a shopping bag or a small suitcase</string>
    <string name="str_your_review">Your Review</string>
    <string name="str_language">Language</string>
    <string name="lbl_for_language">Select Default Language for the App</string>
    <string name="str_city">City</string>
    <string name="lbl_for_city">Select Default City</string>
    <string name="str_currency">Currency</string>
    <string name="lbl_for_currency">Select Default Currency</string>
    <string name="str_measurement_unit">Measurement Unit</string>
    <string name="lbl_for_measurement_unit">Select Default Measurement Unit</string>
    <string name="str_time_format">Time Format</string>
    <string name="lbl_for_time_format">Select Default Time Format</string>
    <string name="msg_change_location">Your Pickup location has changed. Your ride will be calibrated on the new route</string>
    <string name="str_new_calculated_distance">New Calculated Distance :</string>
    <string name="str_new_calculated_duration">New Calculated Duration :</string>
    <string name="str_new_calculated_fare">New Calculated Fare :</string>
    <string name="str_charges">Charges</string>
    <string name="lbl_actual_meter_fare">Actual Meter Fare</string>
    <string name="str_delete_dispute">Delete Dispute</string>
    <string name="btn_rate_this_ride">Rate this Ride</string>
    <string name="str_under_review">Under Review</string>
    <string name="str_schedule_ride">Schedule Ride</string>
    <string name="str_reward_points_earned_for_this_ride">Reward points earned for this ride </string>
    <string name="err_valid_phone_number">Please enter a valid phone no.</string>
    <string name="err_phone_and_gender">Please enter Phone number and Gender.</string>
    <string name="err_valid_email">Please enter a valid email.</string>
    <string name="err_full_name">Please enter Full Name</string>
    <string name="err_internet_connection">No internet connection</string>
    <string name="title_register_dispute">Register Dispute</string>
    <string name="str_please_wait">Please Wait</string>
    <string name="str_fair_fare_india">FairFareIndia</string>
    <string name="msg_delete_img">Are you sure you remove this image?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="err_enter_message">Please enter message</string>
    <string name="str_no_complaints">You have not filed any Complaints yet.</string>
    <string name="str_id">ID</string>
    <string name="str_filed_date">Filed Date</string>
    <string name="title_complaint_details">Complaint Details</string>
    <string name="str_no_luggage">No Luggage</string>
    <string name="str_total_fare_charged">Total Fare Charged</string>
    <string name="title_my_disputes">My Disputes</string>
    <string name="msg_no_disputes">You have not registered any Disputes yet.</string>
    <string name="msg_dialog_file_complaint">Are you sure you want to file Complaint?</string>
    <string name="dialog_msg_delete_dipute">Are you sure you want to delete Dispute?</string>
    <string name="title_dispute_details">Dispute Details</string>
    <string name="msg_no_saved_location">You have not Saved any Locations yet!</string>
    <string name="title_my_rides">My Rides</string>
    <string name="msg_no_rides">You have not taken any Rides yet.</string>
    <string name="msg_ride_not_completed">Your ride is not completed yet.</string>
    <string name="str_ride_completed">Your Ride is Completed</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resendotp">Re-send another code</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_proceed">Proceed</string>
    <string name="str_service_type">Service Type</string>
    <string name="str_route_served">Route Served</string>
    <string name="str_address">Address</string>
    <string name="str_contact">Contact No</string>
    <string name="str_email">Email</string>
</resources>