<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_15sdp">

    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textStyle="bold"
        android:text="@string/msg_change_location"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp" />


    <TextView
        android:id="@+id/tvPickUpLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/Black"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp" />



    <TextView
        android:visibility="gone"
        android:id="@+id/tvDropUpLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/Black"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp"/>



    <TextView
        android:id="@+id/tvCalculatedDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/str_new_calculated_distance"
        android:textColor="@color/Black"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tvCalculatedDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/str_new_calculated_duration"
        android:textColor="@color/Black"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp"/>

    <TextView
        android:id="@+id/tvCalculatedNewFare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/str_new_calculated_fare"
        android:textColor="@color/Black"
        android:fontFamily="@font/notosansjp_regular"
        android:textSize="@dimen/text_14sp"/>


    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp">

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_proceed"
            android:fontFamily="@font/notosansjp_regular"
            android:textSize="@dimen/text_14sp"/>


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_cancel"
            android:fontFamily="@font/notosansjp_regular"
            android:textSize="@dimen/text_14sp"/>

    </RelativeLayout>


</LinearLayout>