<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:fontFamily="@font/notosansjp_regular"
        android:includeFontPadding="false"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:layout_height="@dimen/toolbar_height"
        >


        <TextView
            android:textColor="@color/colorText"
            android:id="@+id/custom_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/text_18sp"
            android:text="@string/title_otp_verification"
            android:fontFamily="@font/notosansjp_bold"
            android:includeFontPadding="false" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:textColor="@color/colorGreyText"
        android:fontFamily="@font/notosansjp_regular"
        android:includeFontPadding="false"
        android:id="@+id/top_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_46sdp"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="2sp"
        android:textSize="@dimen/text_14sp"
        android:text="@string/str_a_code_has_been_sent_to"
        android:textAppearance="@style/top_line" />

    <TextView
        android:textColor="@color/colorGreyText"
        android:fontFamily="@font/notosansjp_bold"
        android:includeFontPadding="false"
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="2sp"
        android:textStyle="bold"
        android:textSize="@dimen/text_14sp"
        android:textAppearance="@style/top_line" />


    <EditText
        android:textColor="@color/colorGreyText"
        android:textColorHint="@color/colorGreyText"
        android:backgroundTint="@color/colorGreyText"
        android:id="@+id/edt_otp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:hint="@string/enter_otp"
        android:textSize="@dimen/text_16sp"
        android:fontFamily="@font/notosansjp_regular"
        android:inputType="number"
        />



    <LinearLayout
        android:id="@+id/lltimer"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_you_will_get_otp_by_sms_in"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/notosansjp_regular"
            android:textColor="@color/colorText" />

        <TextView
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/txtResendTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:30"
            android:textSize="@dimen/text_14sp"
            android:fontFamily="@font/notosansjp_regular"
            android:textColor="@color/gradientstartcolor" />


    </LinearLayout>



    <TextView
        android:visibility="gone"
        android:includeFontPadding="false"
        android:textColor="@color/gradientstartcolor"
        android:id="@+id/txt_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="2sp"
        android:text="@string/resendotp"
        android:textSize="@dimen/text_14sp"
        android:fontFamily="@font/notosansjp_regular"
        android:textAppearance="@style/top_line" />



    <Button
        android:includeFontPadding="false"
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/shape_roundedbtn"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/btn_finish"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/text_16sp"
        android:fontFamily="@font/notosansjp_regular"/>




</LinearLayout>