<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/img_arrow"
                android:fontFamily="@font/notosansjp_regular"
                android:textColor="@color/Black"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_14sp"/>

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_drop_down"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_charges"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:text="@string/str_service_type"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryLightGray" />

                <TextView
                    android:textColor="@color/colorGreyText"
                    android:id="@+id/txt_service_type"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:textSize="@dimen/text_14sp" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/secondaryLightGray" />


            <!-- Route Served -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:text="@string/str_route_served"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryLightGray" />

                <TextView
                    android:textColor="@color/colorGreyText"
                    android:id="@+id/txt_route_served"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:textSize="@dimen/text_14sp" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/secondaryLightGray" />

            <!-- ADDRESS -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:text="@string/str_address"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryLightGray" />

                <TextView
                    android:textColor="@color/colorGreyText"
                    android:id="@+id/txt_address"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:textSize="@dimen/text_14sp" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/secondaryLightGray" />

            <!-- Contact NO -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:text="@string/str_contact"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryLightGray" />

                <TextView
                    android:textColor="@color/colorGreyText"
                    android:id="@+id/txt_contact_no"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:textSize="@dimen/text_14sp" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/secondaryLightGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:text="@string/str_email"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_14sp" />

                <View
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryLightGray" />

                <TextView
                    android:textColor="@color/colorGreyText"
                    android:id="@+id/txt_email"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosansjp_regular"
                    android:textSize="@dimen/text_14sp" />



            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>